# regent

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/: regent  regent-stop
.github/workflows/: ci.yml  publish.yml
.regent/: control.json
.regent/plans/PLAN-001/: ADVISOR-REVIEW-1-PROMPT.md  ADVISOR-REVIEW-1.md  ADVISOR-REVIEW-2-PROMPT.md  ADVISOR-REVIEW-2.md  APPROVAL.md  CLAUDE-REBUTTAL.md  PLAN.md  REQUEST.md
.regent/plans/PLAN-002/: ADVISOR-REVIEW-1-PROMPT.md  ADVISOR-REVIEW-1.md  ADVISOR-REVIEW-2.md  APPROVAL.md  CLAUDE-REBUTTAL.md  PLAN.md  REQUEST.md
.regent/plans/PLAN-003/: ADVISOR-REVIEW-1.md  ADVISOR-REVIEW-2.md  ADVISOR-REVIEW-T1.md  APPROVAL.md  CLAUDE-REBUTTAL.md  PLAN.md  REQUEST.md
.regent/plans/PLAN-004/: ADVISOR-REVIEW-1.md  ADVISOR-REVIEW-1.md-PROMPT.md  ADVISOR-REVIEW-2.md  ADVISOR-REVIEW-2.md-PROMPT.md  APPROVAL.md  CLAUDE-REBUTTAL.md  PLAN.md  (+1 more)
.regent/protocol/: audit.jsonl
.regent/skills/: regent  regent-stop
docs/: ESCOPO.md  PRD.md  RELEASING.md
docs/brainstorm/: REGRAS.md
scripts/: gate-package.sh  update-manifest.py
src/regent/: __init__.py  activity.py  activity_cli.py  cli.py  doctor.py  initcmd.py
tests/: test_abort.py  test_activity.py  test_activity_cli.py  test_choreography.py  test_confine.py  test_consult.py  test_control.py  test_doctor.py  test_gate.py  test_hookscript.py  test_init_upgrade.py  test_initcmd.py  test_lock.py  test_loop.py  test_loop_cli.py  test_protocol_facade.py  test_skills_v1.py  test_step06_fixes.py  test_stop.py  test_supervisor.py  test_supervisor_cli.py  test_turn.py
(+60 files in other folders)
