[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "regent-cli"
version = "0.1.0"
description = "Autonomous conduction and mediated adversarial deliberation between AI agents, pluggable into any project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Flavio Alvim", email = "flavioalvim@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/flavioalvim/regent"

[project.scripts]
regent = "regent.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
regent = ["templates/**/*"]
